--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 			<h1 class="blackHead">About Us</h1>
 			<div class="error clearfix">
 				<img src="images/error.png" alt="Error Screen"/>
-				<p>Occupy Wall Street. Arab Spring. Greek Riots. We’ve been experiencing a great crisis of representation these past decades, regardless of our geolocation, ethnicity or culture. The political system insists in excluding most of us from the spaces where the decisions that impact the most in our life are taken. The internet has changed everything: the way we share and consume culture, the way we do commerce, and communicate with others. But the internet has failed to change in one key space of our lives: politics. Democracy is in great need of a serious update.</p>
+				<p>Occupy Wall Street. Arab Spring. Greek Riots. We’ve been experiencing a great crisis of representation these past decades, regardless of our location, ethnicity or culture. The political system insists in excluding most of us from the spaces where the decisions are made that impact our lives. The internet has changed everything: the way we share and consume culture, how we engage in commerce, and how we communicate with others. But the internet has failed to change in one key area of our lives: politics. Democracy is in great need of a serious upgrade.</p>
 			</div>
 			<div class="info">
 				<img src="images/monitor.jpg" alt="It's time to Change the Tool" class="monitor"/>
-				<p>We are working on a user-friendly, open-source, vote-and-debate tool, specially crafted for parlia-ments, parties and decision-making institutions that will allow citizens to <strong>get informed, join the con-versation</strong> and <strong>vote</strong> on topics, just how they want their representatives to vote. A tool that will trans-form the noise we create during protests into a signal that has a clear, direct and strong impact on the political system. Our vision is that DemocracyOS will become the operating system of a more open and participatory government. <a href="http://dos.partidodelared.org/" class="lightGreen" target="_blank">Live Demo for the City of Buenos Aires.</a></p>
-				<p>We're about to start a Kickstarter to seek funding for our mission. <a href="mailto:speak@democracyos.org" class="pink">Want to Join us?</a></p>
+				<p>We are working on a user-friendly, open-source, vote and debate tool, crafted for parliaments, parties and decision-making institutions that will allow citizens to <strong>get informed, join the conversation</strong> and <strong>vote</strong> on topics, just how they want their representatives to vote. A tool that will transform the noise we create during protests into a signal that has a clear, direct and strong impact on the political system. Our vision is that DemocracyOS will become the operating system of a more open and participatory government. <a href="http://dos.partidodelared.org/" class="lightGreen" target="_blank">Live Demo for the City of Buenos Aires.</a></p>
+				<p>We're about to start a Kickstarter to seek funding for our mission. <a href="mailto:speak@democracyos.org" class="pink">Join Us.</a></p>
 				<img src="images/divider.png" alt="" class="divider" />
 				<img src="images/app-screens.jpg" alt="" />
 				<div class="lineBreak"></div>
@@ -100,7 +100,7 @@
 					<input type="email" placeholder="Notify me when campaign is launched" suggest="email" class="suggestive error" name="cm-kthjj-kthjj" required/>
 					<input type="submit" value="Notify Me" />
 				</form>
-				<p>*We will not spam. We will mail only once notifying once the Kickstarter is launched, then you can opt-out of our mailing list.</p>
+				<p>* We do not send spam. We will e-mail you once, notifying you when the Kickstarter is launched, and then you can opt-out of future e-mails, if you like.</p>
 				<div class="lineBreak"></div>
 				<div class="logo"><img src="images/logo-large.png" alt="Democracy.OS" /></div>
 			</div>
@@ -108,7 +108,9 @@
 		<div id="slide3" class="clearfix">
 			<h1 class="whiteHead">Who We Are</h1>
 			<p>Behind the project there's a group of 40+ millennials; young entrepreneurs and active enthusiasts,<br/>
-			software engineers, artists, political  and social scientists and educators. All aligned for a <br/> a common purpose: to stop choosing between pre-set options and take part in designing those options.  <br/>The balance between coders and social scientists is key since we are building technology with meaning: building a net democracy. <br/> We presented democracyOS at <a href="http://www.youtube.com/watch?v=mMQgiGOBlXk" class="voilet" target="_blank">World Economic Forum</a>, <a href="http://www.youtube.com/watch?v=lECAWGkvDlg" class="green" target="_blank">World Justice Forum</a>  and <a href="http://www.youtube.com/watch?v=fOn2IIpj7iY" class="pink" target="_blank">TEDx</a>. <br/> Check them out and learn more about our story on our <a href="http://blog.democracyos.org" target="_blank" class="blue">blog</a>!</p>
+			software engineers, artists, political and social scientists, and educators. All aligned for a <br/> a common purpose: to stop choosing between pre-set options and take part in designing new options.<br/>
+			The balance between coders and social scientists is key, because we are building technology with meaning: building an internet democracy. <br/> We presented DemocracyOS at the <a href="http://www.youtube.com/watch?v=mMQgiGOBlXk" class="voilet" target="_blank">World Economic Forum</a>, the <a href="http://www.youtube.com/watch?v=lECAWGkvDlg" class="green" target="_blank">World Justice Forum</a>  and <a href="http://www.youtube.com/watch?v=fOn2IIpj7iY" class="pink" target="_blank">TEDx</a>. <br/>
+			Check out those videos and learn more about our story on our <a href="http://blog.democracyos.org" target="_blank" class="blue">blog</a>!</p>
 			<div class="lineBreak"></div>
 		<div id="avatars">
 			<img src="images/maze-bg.png" alt="Maze" usemap="#Map" border="0" width="1920" height="624" />
@@ -169,20 +171,20 @@
 				<div>
 					<h3><img src="images/bullet-pink.png" alt="" />How does DOS improve previous online voting systems?</h3>
 					<div class="accContent">
-						<p>DemocracyOS has a much more user friendly interface, especially in terms of data visualization and browsing. It is a two-way platform: bottom-up (citizens can present projects to be debated) and top-down (the representative presents for debate those bills currently in debate in Congress). DemocracyOS has three basic actions: get informed, join the conversation and vote.</p>
+						<p>DemocracyOS has a much more user friendly interface, especially in terms of data visualization and browsing. It is a two-way platform: bottom-up (citizens can present projects to be debated) and top-down (the representative presents for debate those bills currently in debate in Congress). DemocracyOS has three basic actions: "get informed," "join the conversation," and "vote."</p>
 					</div>
 				</div>
 				<div>
 					<h3><img src="images/bullet-voilet.png" alt="" />What's the status of development?</h3>
 					<div class="accContent">
-						<p>We’ve built the initial 20% of the software - the basic initial architecture and frontend. We are working on a Law Markup Language for legislative data (a data structure standard to incorporate data scrapped from legislative sources around the word. The goal is to build an LML to be read by DemocracyOS as well as other apps that accept this open standard) Finally, we have a tested first prototype.</p>
-						<p>For us to build a stable version, in multiple languages, with mobile support and API REST, we project one year minimum of development with an experienced team of full time of 5 to 7 people.</p>
+						<p>We’ve built the initial 20% of the software—the basic, initial architecture and front end. We are working on a law markup language for legislative data. (That is, a data structure standard to incorporate data scraped from legislative sources around the word. The goal is to build an LML to be read by DemocracyOS as well as other apps that accept this open standard.) Finally, we have a tested initial prototype.</p>
+						<p>For us to build a stable version, in multiple languages, with mobile support and a RESTful API, we'll need at least one year of development, with an experienced team of 5–7 people, working full-time.</p>
 					</div>
 				</div>
 				<div>
 					<h3><img src="images/bullet-yellow.png" alt="" />How difficult is it to implement DOS in my party/institution?</h3>
 					<div class="accContent">
-						<p>It should be similar to installing Wordpress. We will provide content (videos, tutorials) so that ideally anyone can setup DemocracyOS. </p>
+						<p>It should be similar to installing WordPress. We will provide content (videos, tutorials) so that ideally anyone can setup DemocracyOS. </p>
 						<p>We will also be building a self-setup mechanism for those of you who just can't wait. </p>
 					</div>
 				</div>
