updated ted link

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <h1 class="whiteHead">Who We Are</h1>
       <p>Behind the project there's a group of 40+ millennials; young entrepreneurs and active enthusiasts,<br/>
       software engineers, artists, political and social scientists, and educators. All aligned for a <br/> a common purpose: to stop choosing between pre-set options and take part in designing new options.<br/>
-      The balance between coders and social scientists is key, because we are building technology with meaning: building an internet democracy. <br/> We presented DemocracyOS at the <a href="http://www.youtube.com/watch?v=mMQgiGOBlXk" class="voilet" target="_blank">World Economic Forum</a>, the <a href="http://www.youtube.com/watch?v=lECAWGkvDlg" class="green" target="_blank">World Justice Forum</a>  and <a href="http://www.youtube.com/watch?v=fOn2IIpj7iY" class="pink" target="_blank">TEDx</a>. <br/>
+      The balance between coders and social scientists is key, because we are building technology with meaning: building an internet democracy. <br/> We presented DemocracyOS at the <a href="http://www.youtube.com/watch?v=mMQgiGOBlXk" class="voilet" target="_blank">World Economic Forum</a>, the <a href="http://www.youtube.com/watch?v=lECAWGkvDlg" class="green" target="_blank">World Justice Forum</a>  and <a href="http://www.ted.com/talks/pia_mancini_how_to_upgrade_democracy_for_the_internet_era" class="pink" target="_blank">TED</a>. <br/>
       Check out those videos and learn more about our story on our <a href="http://blog.democracyos.org" target="_blank" class="blue">blog</a>!</p>
       <div class="lineBreak"></div>
     <div id="avatars">
